added features, modified and fixed others

--- a/Dashboard/src/app/side-bar/side-bar.component.html
+++ b/Dashboard/src/app/side-bar/side-bar.component.html
@@ -1,7 +1,7 @@
 <div class="flex h-screen bg-gray-100">
    <div class="flex h-screen bg-gray-100">
     <aside class="w-64 bg-white shadow-md hidden md:block">
-        <div class="p-4 text-lg font-semibold text-gray-700">Dashboard</div>
+        <!-- <div class="p-4 text-lg font-semibold text-gray-700">Dashboard</div> -->
         <nav class="mt-4">
         <a routerLink="/home" routerLinkActive="active" class="block px-4 py-2 text-gray-600 hover:bg-gray-100">Home</a>
         <a routerLink="/orders" routerLinkActive="active" class="block px-4 py-2 text-gray-600 hover:bg-gray-100">Orders</a>
