Modified orders, products and home pages & added new features

--- a/Dashboard/src/app/app.component.html
+++ b/Dashboard/src/app/app.component.html
@@ -2,8 +2,7 @@
 <header class="flex items-center justify-between p-4 bg-white shadow">
   <h1 class="text-xl font-semibold text-gray-700">Admin Dashboard</h1>
   <div class="space-x-4">
-    <button class="text-gray-600">🔔</button>
-    <button class="text-gray-600">👤</button>
+    <button class="text-gray-600">ADMIN: Heba Mahmoud 👩‍💼</button>
   </div>
 </header>
 
